--- a/test.ipynb
+++ b/test.ipynb
@@ -538,38 +538,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "e345569f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ddpm import UNET"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "7b84b67e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = UNET()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d7f4cb29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[0.4963, 0.7682, 0.0885, 0.1320, 0.3074],\n",
-       "        [0.6341, 0.4901, 0.8964, 0.4556, 0.6323],\n",
-       "        [0.3489, 0.4017, 0.0223, 0.1689, 0.2939],\n",
-       "        [0.5185, 0.6977, 0.8000, 0.1610, 0.2823],\n",
-       "        [0.6816, 0.9152, 0.3971, 0.8742, 0.4194],\n",
-       "        [0.5529, 0.9527, 0.0362, 0.1852, 0.3734],\n",
-       "        [0.3051, 0.9320, 0.1759, 0.2698, 0.1507],\n",
-       "        [0.0317, 0.2081, 0.9298, 0.7231, 0.7423],\n",
-       "        [0.5263, 0.2437, 0.5846, 0.0332, 0.1387],\n",
-       "        [0.2422, 0.8155, 0.7932, 0.2783, 0.4820]])"
+       "16656515"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n1"
+    "sum(param.numel() for param in model.parameters())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7b84b67e",
+   "id": "67bcc476",
    "metadata": {},
    "outputs": [],
    "source": []
