--- a/test.ipynb
+++ b/test.ipynb
@@ -538,37 +538,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e345569f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ddpm import UNET"
+    "from ddpm import UNet\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "d68afea3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torchvision\n",
+    "torchvision.transforms.RandomHorizontalFlip()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f647994",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "7b84b67e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = UNET()"
+    "model = UNet().to('cpu')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "d7f4cb29",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "16656515"
+       "24406019"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
